ui: add tw-rocket-crash

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       </nav>
       <main class="container max-w-6xl mx-auto py-12">
         <div class="flex flex-wrap gap-3">
+          <a href="/pages/tw-rocket-crash" class="bg-zinc-800 hover:bg-zinc-700 p-3 rounded-lg">tw-rocket-crash</a>
         </div>
       </main>
     </div>
