--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <main class="container max-w-6xl mx-auto py-12">
         <div class="flex flex-wrap gap-3">
           <a href="/pages/tw-rocket-crash" class="bg-zinc-800 hover:bg-zinc-700 p-3 rounded-lg">tw-rocket-crash</a>
+          <a href="/pages/tw-ship-radar" class="bg-zinc-800 hover:bg-zinc-700 p-3 rounded-lg">tw-ship-radar</a>
         </div>
       </main>
     </div>
